# BankTrack

./: .gitignore  .pre-commit-config.yaml  README.md  bank_urls.json  banktrack_urls.json  main.py  pyproject.toml  scraper.py
.github/workflows/: main.yml
data/html/: after.html  before.html
notebooks/: 20211221_PDF_Site_Search_Flow.ipynb  20211225_Parent_HTML_Finder.ipynb
notes/: changedetection.org  differ.org
scraper/: banktrack_scraper.py  logger.py  scraper.py  web_scraper.py
