[tool.poetry]
name = "banktrack"
version = "0.1.0"
description = ""
authors = ["Luka Sturtewagen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
