[tool.poetry]
name = "banktrack"
version = "0.1.0"
description = ""
authors = ["Luka Sturtewagen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.0"
googlesearch-python = "^1.0.1"
pydantic = "^1.8.2"
python-lsp-server = {version = "^1.3.3", optional = true}


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.16.0"
black = "^21.12-beta.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"
pydocstyle = "^6.1.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
